--- a/environment/frontend_server/templates/home/main_script.html
+++ b/environment/frontend_server/templates/home/main_script.html
@@ -102,7 +102,7 @@
 	let pre_anims_direction;
 	let pre_anims_direction_dict = {};
 
-	let curr_maze = "the_ville";
+	let curr_maze = "chemville";
 
 	// <tile_width> is the width of one individual tile (tiles are square)
 	let tile_width = 32;
@@ -152,25 +152,21 @@
 	  //       png file that contains the tileset. 
 	  //       Also IMPORTANT: when you create a tileset in Tiled, always be  
 	  //       sure to check the "embedded" option. 
-	  this.load.image("blocks_1", "{% static 'assets/the_ville/visuals/map_assets/blocks/blocks_1.png' %}");
-	  this.load.image("walls", "{% static 'assets/the_ville/visuals/map_assets/v1/Room_Builder_32x32.png' %}");
-	  this.load.image("interiors_pt1", "{% static 'assets/the_ville/visuals/map_assets/v1/interiors_pt1.png' %}");
-	  this.load.image("interiors_pt2", "{% static 'assets/the_ville/visuals/map_assets/v1/interiors_pt2.png' %}");
-	  this.load.image("interiors_pt3", "{% static 'assets/the_ville/visuals/map_assets/v1/interiors_pt3.png' %}");
-	  this.load.image("interiors_pt4", "{% static 'assets/the_ville/visuals/map_assets/v1/interiors_pt4.png' %}");
-	  this.load.image("interiors_pt5", "{% static 'assets/the_ville/visuals/map_assets/v1/interiors_pt5.png' %}");
-	  this.load.image("CuteRPG_Field_B", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Field_B.png' %}");
-	  this.load.image("CuteRPG_Field_C", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Field_C.png' %}");
-	  this.load.image("CuteRPG_Harbor_C", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Harbor_C.png' %}");
-	  this.load.image("CuteRPG_Village_B", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Village_B.png' %}");
-	  this.load.image("CuteRPG_Forest_B", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Forest_B.png' %}");
-	  this.load.image("CuteRPG_Desert_C", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Desert_C.png' %}");
-	  this.load.image("CuteRPG_Mountains_B", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Mountains_B.png' %}");
-	  this.load.image("CuteRPG_Desert_B", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Desert_B.png' %}");
-	  this.load.image("CuteRPG_Forest_C", "{% static 'assets/the_ville/visuals/map_assets/cute_rpg_word_VXAce/tilesets/CuteRPG_Forest_C.png' %}");
+	  this.load.image("blocks_1", "{% static 'assets/the_ville/visuals/tilesets/blocks/blocks_1.png' %}");
+	  this.load.image("blocks_2", "{% static 'assets/the_ville/visuals/tilesets/blocks/blocks_2.png' %}");
+	  this.load.image("blocks_3", "{% static 'assets/the_ville/visuals/tilesets/blocks/blocks_3.png' %}");
+	  
+	  this.load.image("Cafeteria", "{% static 'assets/the_ville/visuals/tilesets/Cafeteria.png' %}");
+	  this.load.image("Characters", "{% static 'assets/the_ville/visuals/tilesets/Characters.png' %}");
+	  this.load.image("Dormatory", "{% static 'assets/the_ville/visuals/tilesets/Dormatory.png' %}");
+	  this.load.image("Experimental", "{% static 'assets/the_ville/visuals/tilesets/Experimental.png' %}");
+	  this.load.image("Office", "{% static 'assets/the_ville/visuals/tilesets/Office.png' %}");
+	  this.load.image("Outdoors", "{% static 'assets/the_ville/visuals/tilesets/Outdoors.png' %}");
+	  this.load.image("Seminarroom", "{% static 'assets/the_ville/visuals/tilesets/Seminarroom.png' %}");
+	  this.load.image("Theoretical", "{% static 'assets/the_ville/visuals/tilesets/Theoretical.png' %}");
 
 	  // Joon: This is the export json file you get from Tiled. 
-	  this.load.tilemapTiledJSON("map", "{% static 'assets/the_ville/visuals/the_ville_jan7.json' %}");
+	  this.load.tilemapTiledJSON("map", "{% static 'assets/chemville/visuals/chemville_16april.json' %}");
 
 	  // An atlas is a way to pack multiple images together into one texture. I'm 
 	  // using it to load all the player animations (walking left, walking right, 
@@ -196,23 +192,36 @@
 	  // Joon: for the first parameter here, really take a look at the 
 	  //       console.log(map) output. You need to make sure that the name 
 	  //       matches.
-	  const collisions = map.addTilesetImage("blocks", "blocks_1");
-	  const walls = map.addTilesetImage("Room_Builder_32x32", "walls");
-	  const interiors_pt1 = map.addTilesetImage("interiors_pt1", "interiors_pt1");
-	  const interiors_pt2 = map.addTilesetImage("interiors_pt2", "interiors_pt2");
-	  const interiors_pt3 = map.addTilesetImage("interiors_pt3", "interiors_pt3");
-	  const interiors_pt4 = map.addTilesetImage("interiors_pt4", "interiors_pt4");
-	  const interiors_pt5 = map.addTilesetImage("interiors_pt5", "interiors_pt5");
-	  const CuteRPG_Field_B = map.addTilesetImage("CuteRPG_Field_B", "CuteRPG_Field_B");
-	  const CuteRPG_Field_C = map.addTilesetImage("CuteRPG_Field_C", "CuteRPG_Field_C");
-	  const CuteRPG_Harbor_C = map.addTilesetImage("CuteRPG_Harbor_C", "CuteRPG_Harbor_C");
-	  const CuteRPG_Village_B = map.addTilesetImage("CuteRPG_Village_B", "CuteRPG_Village_B");
-	  const CuteRPG_Forest_B = map.addTilesetImage("CuteRPG_Forest_B", "CuteRPG_Forest_B");
-	  const CuteRPG_Desert_C = map.addTilesetImage("CuteRPG_Desert_C", "CuteRPG_Desert_C");
-	  const CuteRPG_Mountains_B = map.addTilesetImage("CuteRPG_Mountains_B", "CuteRPG_Mountains_B");
-	  const CuteRPG_Desert_B = map.addTilesetImage("CuteRPG_Desert_B", "CuteRPG_Desert_B");
-	  const CuteRPG_Forest_C = map.addTilesetImage("CuteRPG_Forest_C", "CuteRPG_Forest_C");
+	  const blocks_1 = map.addTilesetImage("blocks", "blocks_1");
+	  const blocks_2 = map.addTilesetImage("blocks_2", "blocks_2");
+	  const blocks_3 = map.addTilesetImage("blocks_3", "blocks_3");
 
+	  const cafeteria = map.addTilesetImage("Cafeteria", "Cafeteria");
+	  const characters = map.addTilesetImage("Characters", "Characters");
+	  const dormatory = map.addTilesetImage("Dormatory", "Dormatory");
+	  const experimental = map.addTilesetImage("Experimental", "Experimental");
+	  const office = map.addTilesetImage("Office", "Office");
+	  const outdoors = map.addTilesetImage("Outdoors", "Outdoors");
+	  const seminarroom = map.addTilesetImage("Seminarroom", "Seminarroom");
+	  const theoretical = map.addTilesetImage("Theoretical", "Theoretical");
+
+	  //const collisions = map.addTilesetImage("blocks", "blocks_1");
+	  //const walls = map.addTilesetImage("Room_Builder_32x32", "walls");
+	  //const interiors_pt1 = map.addTilesetImage("interiors_pt1", "interiors_pt1");
+	  //const interiors_pt2 = map.addTilesetImage("interiors_pt2", "interiors_pt2");
+	  //const interiors_pt3 = map.addTilesetImage("interiors_pt3", "interiors_pt3");
+	  //const interiors_pt4 = map.addTilesetImage("interiors_pt4", "interiors_pt4");
+	  //const interiors_pt5 = map.addTilesetImage("interiors_pt5", "interiors_pt5");
+	  //const CuteRPG_Field_B = map.addTilesetImage("CuteRPG_Field_B", "CuteRPG_Field_B");
+	  //const CuteRPG_Field_C = map.addTilesetImage("CuteRPG_Field_C", "CuteRPG_Field_C");
+	  //const CuteRPG_Harbor_C = map.addTilesetImage("CuteRPG_Harbor_C", "CuteRPG_Harbor_C");
+	  //const CuteRPG_Village_B = map.addTilesetImage("CuteRPG_Village_B", "CuteRPG_Village_B");
+	  //const CuteRPG_Forest_B = map.addTilesetImage("CuteRPG_Forest_B", "CuteRPG_Forest_B");
+	  //const CuteRPG_Desert_C = map.addTilesetImage("CuteRPG_Desert_C", "CuteRPG_Desert_C");
+	  //const CuteRPG_Mountains_B = map.addTilesetImage("CuteRPG_Mountains_B", "CuteRPG_Mountains_B");
+	  //const CuteRPG_Desert_B = map.addTilesetImage("CuteRPG_Desert_B", "CuteRPG_Desert_B");
+	  //const CuteRPG_Forest_C = map.addTilesetImage("CuteRPG_Forest_C", "CuteRPG_Forest_C");
+	  
 	  // The first parameter is the layer name (or index) taken from Tiled, the 
 	  // second parameter is the tileset you set above, and the final two 
 	  // parameters are the x, y coordinate. 
@@ -220,9 +229,12 @@
 	  //       literally is taken from our Tiled layer name. So to find out what
 	  //       they are; you actually need to open up tiled and see how you 
 	  //       named things there. 
-	  let tileset_group_1 = [CuteRPG_Field_B, CuteRPG_Field_C, CuteRPG_Harbor_C, CuteRPG_Village_B, 
-	  											 CuteRPG_Forest_B, CuteRPG_Desert_C, CuteRPG_Mountains_B, CuteRPG_Desert_B, CuteRPG_Forest_C,
-	  											 interiors_pt1, interiors_pt2, interiors_pt3, interiors_pt4, interiors_pt5, walls];
+	  let tileset_group_1 = [
+		cafeteria, characters, dormatory, experimental, office, outdoors, seminarroom, theoretical,
+		blocks_1, blocks_2, blocks_3
+	];
+
+	// Create layers using those tilesets
 	  const bottomGroundLayer = map.createLayer("Bottom Ground", tileset_group_1, 0, 0);
 	  const exteriorGroundLayer = map.createLayer("Exterior Ground", tileset_group_1, 0, 0);
 	  const exteriorDecorationL1Layer = map.createLayer("Exterior Decoration L1", tileset_group_1, 0, 0);
@@ -235,6 +247,22 @@
 	  const foregroundL2Layer = map.createLayer("Foreground L2", tileset_group_1, 0, 0);
 	  foregroundL1Layer.setDepth(2);
 	  foregroundL2Layer.setDepth(2);
+
+	  //let tileset_group_1 = [CuteRPG_Field_B, CuteRPG_Field_C, CuteRPG_Harbor_C, CuteRPG_Village_B, 
+	  //											 CuteRPG_Forest_B, CuteRPG_Desert_C, CuteRPG_Mountains_B, CuteRPG_Desert_B, CuteRPG_Forest_C,
+	  //											 interiors_pt1, interiors_pt2, interiors_pt3, interiors_pt4, interiors_pt5, walls];
+	  //const bottomGroundLayer = map.createLayer("Bottom Ground", tileset_group_1, 0, 0);
+	  //const exteriorGroundLayer = map.createLayer("Exterior Ground", tileset_group_1, 0, 0);
+	  //const exteriorDecorationL1Layer = map.createLayer("Exterior Decoration L1", tileset_group_1, 0, 0);
+	  //const exteriorDecorationL2Layer = map.createLayer("Exterior Decoration L2", tileset_group_1, 0, 0);
+	  //const interiorGroundLayer = map.createLayer("Interior Ground", tileset_group_1, 0, 0);
+	  //const wallLayer = map.createLayer("Wall", [CuteRPG_Field_C, walls], 0, 0);
+	  //const interiorFurnitureL1Layer = map.createLayer("Interior Furniture L1", tileset_group_1, 0, 0);
+	  //const interiorFurnitureL2Layer = map.createLayer("Interior Furniture L2 ", tileset_group_1, 0, 0);
+	  //const foregroundL1Layer = map.createLayer("Foreground L1", tileset_group_1, 0, 0);
+	  //const foregroundL2Layer = map.createLayer("Foreground L2", tileset_group_1, 0, 0);
+	  //foregroundL1Layer.setDepth(2);
+	  //foregroundL2Layer.setDepth(2);
 
 	  const collisionsLayer = map.createLayer("Collisions", collisions, 0, 0);
 	  // const groundLayer = map.createLayer("Ground", walls, 0, 0);
