--- a/environment/frontend_server/templates/home/main_script.html
+++ b/environment/frontend_server/templates/home/main_script.html
@@ -192,7 +192,7 @@
 	  // Joon: for the first parameter here, really take a look at the 
 	  //       console.log(map) output. You need to make sure that the name 
 	  //       matches.
-	  const blocks_1 = map.addTilesetImage("blocks", "blocks_1");
+	  const blocks_1 = map.addTilesetImage("blocks_1", "blocks_1");
 	  const blocks_2 = map.addTilesetImage("blocks_2", "blocks_2");
 	  const blocks_3 = map.addTilesetImage("blocks_3", "blocks_3");
 
