--- a/environment/frontend_server/templates/path_tester/main_script.html
+++ b/environment/frontend_server/templates/path_tester/main_script.html
@@ -185,7 +185,7 @@
 	  foregroundL2Layer.setDepth(2);
 
 
-	  const collisionsLayer = map.createLayer("Collisions", collisions, 0, 0);
+	  const collisionsLayer = map.createLayer("Collisions", blocks_1, 0, 0);
 	  // const groundLayer = map.createLayer("Ground", walls, 0, 0);
 	  // const indoorGroundLayer = map.createLayer("Indoor Ground", walls, 0, 0);
 	  // const wallsLayer = map.createLayer("Walls", walls, 0, 0);
